--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  cached_network_image: ^3.4.1
+  cached_network_image: ^3.4.0
   flutter_svg: ^2.0.16
   provider: ^6.1.2
   shared_preferences: ^2.3.4
@@ -25,6 +25,13 @@ dependencies:
   google_fonts: ^6.1.0
   sizer: ^2.0.15
   flutter_launcher_icons: ^0.14.3
+  # Firebase dependencies
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_storage: ^11.5.6
+  firebase_messaging: ^14.7.9
+  firebase_analytics: ^10.7.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
