urgent gradle bug fix, added homescreen (semi-done design wise), fixed 3 button navigation on android devices

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,3 +40,9 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/sos_button.svg
+    - assets/images/streak_flame.svg
+    - assets/images/background.png
+    - assets/images/bottom_bar_home_pressed.svg
+    - assets/images/ai_button.svg
+    - assets/images/ai_button.png
