--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,3 +46,4 @@ flutter:
     - assets/images/bottom_bar_home_pressed.svg
     - assets/images/ai_button.svg
     - assets/images/ai_button.png
+    - assets/images/img_image.png
