ready little lifts screen

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,9 @@
-# Uncomment this line to define a global platform for your project
-platform :ios, '15.6' # Set an explicit platform version to avoid ambiguity.
+platform :ios, '15.6'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+
+# Firebase SDK version
+$FirebaseSDKVersion = '11.11.0'
 
 project 'Runner', {
   'Debug' => :debug,
@@ -28,15 +29,18 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks!
+  # ✅ Fix for abseil linking issue
+  use_frameworks! :linkage => :static
   use_modular_headers!
 
-  # Explicit Firebase dependency to resolve version conflicts
-  pod 'Firebase/Firestore', '~> 10.25.0' # Align with the cloud_firestore plugin dependency.
-  pod 'Firebase/Auth', '~> 10.25.0'
+  # ✅ Firebase SDK & supporting pods
+  pod 'Firebase', '~> 11.11.0', :modular_headers => true
+  pod 'FirebaseCore', '~> 11.11.0', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'abseil', :modular_headers => true
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  
+
   target 'RunnerTests' do
     inherit! :search_paths
   end
@@ -46,11 +50,9 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
 
-    # Fixes for M1/M2 Macs and additional settings
     target.build_configurations.each do |config|
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      
-      # Add permissions definitions
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.6'
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
         'PERMISSION_CAMERA=1',
@@ -58,16 +60,25 @@ post_install do |installer|
         'PERMISSION_PHOTOS_ADD_ONLY=1',
         'PERMISSION_MICROPHONE=1',
       ]
-      
-      # Ensure minimum iOS deployment target
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.6'
 
-      # Fix gRPC compiler flags for arm64
-      if target.name.include?('gRPC') || target.name.include?('BoringSSL')
+      # ✅ Fixes for gRPC, Abseil, and related C++ compatibility
+      if ['gRPC-Core', 'gRPC', 'gRPC-C++', 'gRPC-BoringSSL', 'BoringSSL-GRPC', 'abseil'].include?(target.name)
+        config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'gnu++14'
         config.build_settings['GCC_OPTIMIZATION_LEVEL'] = '0'
         config.build_settings['COMPILER_INDEX_STORE_ENABLE'] = 'NO'
-        config.build_settings['OTHER_CFLAGS'] = '$(inherited) -Wno-comma -Wno-shorten-64-to-32 -Wno-documentation -Wno-strict-prototypes -Wno-missing-prototypes'
         config.build_settings['USE_HEADERMAP'] = 'NO'
+        config.build_settings['OTHER_CFLAGS'] = '$(inherited) -Wno-comma -Wno-shorten-64-to-32 -Wno-documentation -Wno-strict-prototypes -Wno-missing-prototypes'
+      end
+    end
+
+    # ✅ Remove problematic -G flag from BoringSSL-GRPC
+    if target.name == 'BoringSSL-GRPC'
+      target.source_build_phase.files.each do |file|
+        if file.settings && file.settings['COMPILER_FLAGS']
+          flags = file.settings['COMPILER_FLAGS'].split
+          flags.reject! { |flag| flag == '-GCC_WARN_INHIBIT_ALL_WARNINGS' }
+          file.settings['COMPILER_FLAGS'] = flags.join(' ')
+        end
       end
     end
   end
