sign_up screen 1 ready, working on sign_up screen 2

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,3 +51,4 @@ flutter:
     - assets/images/siri_glow.svg
     - assets/images/surprise_me.svg
     - assets/images/bottom_bar_little_lifts_pressed.svg
+    - assets/images/pronouns.svg
