--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_storage: ^11.6.10
   firebase_messaging: ^14.7.20
   firebase_analytics: ^10.8.10
+  contacts_service: ^0.6.3
+  permission_handler: ^11.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
