--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  url_launcher: ^6.1.14
+  http: ^1.1.0
   cached_network_image: ^3.4.0
   flutter_svg: ^2.0.16
   provider: ^6.1.2
@@ -35,9 +37,11 @@ dependencies:
   firebase_analytics: ^10.8.10
   contacts_service: ^0.6.3
   permission_handler: ^11.3.0
+  uni_links: ^0.5.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
   assets:
@@ -54,3 +58,5 @@ flutter:
     - assets/images/surprise_me.svg
     - assets/images/bottom_bar_little_lifts_pressed.svg
     - assets/images/pronouns.svg
+    - assets/images/spotify_link.svg
+    - assets/images/spotify.svg
