ai starting screen ui ready + apple intelligence animation

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,7 +60,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs access to camera to take photos of your meals.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>This app needs access to microphone to record your voice for meal descriptions.</string>
+	<string>This app needs access to the microphone for speech recognition.</string>
 	<key>NSMotionUsageDescription</key>
 	<string>We need access to motion sensors to create interactive confetti effects in the app</string>
 	<key>NSPhotoLibraryUsageDescription</key>
