--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   permission_handler: ^11.3.0
   uni_links: ^0.5.1
   easy_localization: ^3.0.3
+  speech_to_text: ^6.6.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
