--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uni_links: ^0.5.1
   easy_localization: ^3.0.3
   speech_to_text: ^6.6.2
+  chat_bubbles: ^1.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
