added ui for log screen step four and functional log screen step five

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_maps_flutter_web: ^0.5.4+3
   google_places_flutter: ^2.0.6
   flutter_typeahead: ^5.0.0
+  sensors_plus: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
