--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   sizer: ^2.0.15
   flutter_launcher_icons: ^0.14.3
   glassmorphism: ^3.0.0
+  google_generative_ai: ^0.2.0
+  flutter_dotenv: ^5.1.0
   # Firebase dependencies
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
