--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_typeahead: ^5.0.0
   sensors_plus: ^6.1.1
   image_picker: ^1.0.7
+  path_provider: ^2.1.2
+  dio: ^5.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
