--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   image_picker: ^1.0.7
   path_provider: ^2.1.2
   dio: ^5.4.1
+  table_calendar: ^3.0.9
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
