--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,12 @@ dependencies:
   flutter_typeahead: ^5.0.0
   sensors_plus: ^6.1.1
   image_picker: ^1.0.7
-  path_provider: ^2.1.2
+  path_provider: ^2.1.5
   dio: ^5.4.1
   table_calendar: ^3.0.9
   intl: ^0.19.0
+  pdf: ^3.11.3
+  share_plus: ^10.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
