gentle reminders ready, added notification functionality

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -94,6 +94,9 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
@@ -107,5 +110,11 @@
 	<true/>
 	<key>GMSApiKey</key>
 	<string>AIzaSyABz9tCdUz29okHDMNQYEMX-LuvNUtjZZw</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+		<string>processing</string>
+	</array>
 </dict>
 </plist>
