--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   pdf: ^3.11.3
   share_plus: ^10.0.0
   flutter_markdown: ^0.7.7+1
+  flutter_local_notifications: ^16.3.2
+  timezone: ^0.9.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
