modified:   android/app/build.gradle.kts 	modified:   android/app/src/main/AndroidManifest.xml 	modified:   android/build.gradle.kts 	modified:   firebase.json 	modified:   functions/.eslintrc.js 	new file:   functions/.eslintrc.json 	modified:   functions/package-lock.json 	modified:   functions/package.json 	modified:   functions/src/index.ts 	modified:   functions/tsconfig.json 	modified:   ios/Runner/Info.plist 	modified:   lib/main.dart 	modified:   lib/presentation/porfile_acessibility_settings_screen/porfile_acessibility_settings_screen.dart 	modified:   lib/presentation/profile_gentle_reminders_screen/profile_gentle_reminders_screen.dart 	modified:   lib/presentation/profile_screen/profile_screen.dart 	modified:   lib/providers/user_provider.dart 	new file:   lib/services/notification_service.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "esModuleInterop": true,
-    "moduleResolution": "nodenext",
+    "module": "commonjs",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "lib": ["es2017", "dom"],
+    "types": ["node"]
   },
   "compileOnSave": true,
   "include": [
     "src"
   ]
-}
+} 
