--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_markdown: ^0.7.7+1
   flutter_local_notifications: ^16.3.2
   timezone: ^0.9.2
+  app_settings: ^5.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
